@@ -16,7 +16,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,6 +24,7 @@ public class CommentService {
     private final UserService userService;
     private final PosterService posterService;
 
+    //댓글 생성
     @Transactional
     public CommentResDto createComment(Long posterId, CommentReqDto commentReqDto) {
 
@@ -34,16 +34,18 @@ public class CommentService {
         Comment comment = new Comment(user, poster, commentReqDto.getComment());
         Comment savedComment = commentRepository.save(comment);
 
-        return CommentResDto.toDto(savedComment);
+        return new CommentResDto(savedComment);
     }
 
-    public List<CommentResDto> getComments(Long posterId){
+    // 댓글 전체 조회
+    public List<CommentResDto> findComments(Long posterId){
 
         List<Comment> comments = commentRepository.findAllByPosterId(posterId);
 
-        return comments.stream().map(CommentResDto::toDto).collect(Collectors.toList());
+        return comments.stream().map(CommentResDto::new).toList();
     }
 
+    //댓글 수정
     @Transactional
     public CommentResDto updateComment(Long commentId, CommentReqDto commentReqDto) {
 
@@ -56,9 +58,10 @@ public class CommentService {
 
         comment.updateComment(commentReqDto.getComment());
 
-        return CommentResDto.toDto(comment);
+        return new CommentResDto(comment);
     }
 
+    //댓글 삭제
     @Transactional
     public void deleteComment(Long commentId) {
 
